# hatch-datavolo-nar

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml
src/hatch_datavolo_nar/: __about__.py  builder.py  hooks.py
tests/: __init__.py  test_builder.py  test_hooks.py
